fix: default label color in dark mode
Resolves https://kolaente.dev/vikunja/frontend/issues/2200

--- a/src/styles/custom-properties/colors.scss
+++ b/src/styles/custom-properties/colors.scss
@@ -287,7 +287,7 @@
       // Elements that rely on Bulma defaults in light mode but
       // need to be overriden in dark mode
       --input-placeholder-color: hsla(var(--grey-900-hsl), 0.6);
-      --tag-color: var(--grey-800);
+      --tag-color: var(--grey-300);
       --table-row-hover-background-color: var(--grey-100);
       --dropdown-item-hover-background-color: var(--grey-100);
       --dropdown-item-hover-color: var(--text);
